--- a/www/index.html
+++ b/www/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Hello wasm-pack!</title>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <!--    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
+    <link href="/tailwind.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#000000"/>
     <meta
             name="description"
             content="Web site created by modulitos"
     />
-  </head>
-  <body>
-    <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <div id="root"></div>
-    <script src="./bundle.js"></script>
-  </body>
+</head>
+<body>
+<noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+<div id="root"></div>
+<script src="./bundle.js"></script>
+</body>
 </html>
