--- a/www/src/index.html
+++ b/www/src/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Hello wasm-pack!</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <!--    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
-    <link href="/tailwind.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta
@@ -15,6 +14,5 @@
 <body>
 <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
 <div id="root"></div>
-<script src="./bundle.js"></script>
 </body>
 </html>
